# quadcopter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: model.yaml  sensor.yaml
doc/: quadcopter.new.tex  quadcopter.tex
include/quadcopter/: #model.h#  controller.h  dynamics.h  feedback.h  model.h  planner.h  types.h
launch/: constant_motor.launch  launch_constant.launch
msg/: FullState.msg  ICM20948.msg  IMU.msg  Motor.msg  Sensor.msg
scripts/: make_model.py
src/: .model.cc.swp  const_node.cpp  controller.cpp  controller_constant.cpp  controller_node.cc  dynamics.cpp  feedback.cc  filter_node.cc  localize.cpp  model.cc  model.cpp  model_node.cc  model_node.cpp  planner_constant.cpp
src/quad_msgs/: CMakeLists.txt  package.xml
src/quad_msgs/msg/: Motor.msg  Sensor.msg
src/quadcopter/: CMakeLists.txt  package.xml
src/quadcopter/include/quadcopter/: controller.h  conversions.h  dynamics.h  model.h  types.h
src/quadcopter/src/: const_node.cpp  controller.cpp  conversions.cpp  dynamics.cpp  model.cpp  model_node.cpp
