<?xml version="1.0"?>
<package format="2">
  <name>quadcopter</name>
  <version>0.0.0</version>
  <description>The quadcopter package</description>
  <maintainer email="dinay-kingkiller@gmail.com">dinay-kingkiller</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/dinay-kingkiller/quadcopter</url>
  <author email="dinay.kingkiller@gmail.com">dinay-kingkiller</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <doc_depend>doxygen</doc_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
