<?xml version="1.0"?>
<package format="2">
  <name>quad_msgs</name>
  <version>0.0.1</version>
  <description>ROS messages for quadcopter project</description>
  <maintainer email="dinay-kingkiller@gmail.com">dinay-kingkiller</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/dinay-kingkiller/quadcopter</url>
  <author email="dinay.kingkiller@gmail.com">dinay-kingkiller</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
</package>
